--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,6 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:~/testdb;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
-
+spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
+spring.datasource.username=root
+spring.datasource.password=s3cr3t
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.format_sql=true
