--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,6 @@
+#put remote db url here
 spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
+#remove if datsource url has user and password
 spring.datasource.username=root
 spring.datasource.password=s3cr3t
 spring.jpa.hibernate.ddl-auto=create
