--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.profiles.active=test
 spring.jpa.open-in-view=false
 server.port = 8081
+
+default.sender=cristianoaf81@gmail.com
+default.recipent=cristianoaf81@gmail.com
