--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,21 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
 #remove if datsource url has user and password
 spring.datasource.username=root
-spring.datasource.password=s3cr3t
+spring.datasource.password=plt12345inatel21
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# custom properties
+default.sender=cristianoaf81@gmail.com
+default.recipent=cristianoaf81@gmail.com
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=your_email_here
+spring.mail.password=your_pass_here
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.ssl.enable = true
