--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,13 @@ server.port = 8081
 
 default.sender=cristianoaf81@gmail.com
 default.recipent=cristianoaf81@gmail.com
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=your_email_here
+spring.mail.password=your_email_pass_here
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.ssl.enable = true
