aula(64): implementando e testando envio de email google

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,13 +7,12 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# custom properties
-default.sender=cristianoaf81@gmail.com
-default.recipent=cristianoaf81@gmail.com
+default.sender=put_email_here
+default.recipent=put_email_here
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=your_email_here
-spring.mail.password=your_pass_here
+spring.mail.password=your_email_pass_here
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
