--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.profiles.active=test
 spring.jpa.open-in-view=false
 server.port = 8081
 
-default.sender=cristianoaf81@gmail.com
-default.recipent=cristianoaf81@gmail.com
+default.sender=put_email_here
+default.recipent=put_email_here
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=your_email_here
