85. Salvando primeiro arquivo no S3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.mail.properties.mail.smtp.ssl.enable = true
 jwt.secret=SequenciaDeCaracteresParaGerarToken
 jwt.expiration=86400000
 
-aws.access_key_id=AKIAUSYEWZ257QFMWZP6
-aws.secret_access_key=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
-s3.bucket=curso-spring-ionic-cr81
-s3.region=us-east-1
+aws.access_key_id=access_key_id_here
+aws.secret_access_key=secret_access_key_here
+s3.bucket=bucket_name_here
+s3.region=region_here
