remove keys from property files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.mail.properties.mail.smtp.ssl.enable = true
 jwt.secret=SequenciaDeCaracteresParaGerarToken
 jwt.expiration=86400000
 
-aws.access_key_id=access_key_id_here
-aws.secret_access_key=secret_access_key_here
-s3.bucket=bucket_name_here
-s3.region=region_here
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=
+s3.region=
