--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,10 @@ spring.mail.properties.mail.smtp.socketFactory.fallback = false
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.properties.mail.smtp.ssl.enable = true
 
-jwt.secret=SequenciaDeCaracteresParaGerarToken
+jwt.secret=
 jwt.expiration=86400000
 
-aws.access_key_id=AKIAUSYEWZ257QFMWZP6
-aws.secret_access_key=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
-s3.bucket=curso-spring-ionic-cr81
-s3.region=us-east-1
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=
+s3.region=
