--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 #put remote db url here
-spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
+spring.datasource.url=database_url_here
 #remove if datsource url has user and password
 spring.datasource.username=root
 spring.datasource.password=database_password_here
