creating env file

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,9 @@
+spring.config.import=file:env.properties
 #put remote db url here
-spring.datasource.url=database_url_here
+spring.datasource.url=${APPLICATION_MAIN_DATABASE_URL}
 #remove if datsource url has user and password
-spring.datasource.username=root
-spring.datasource.password=database_password_here
+spring.datasource.username=${APPLICATION_MAIN_DATABASE_USERNAME}
+spring.datasource.password=${APPLICATION_MAIN_DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
