--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
-spring.datasource.username=root
-spring.datasource.password=s3cr3t
+spring.config.import=file:env.properties 
+spring.datasource.url=${APPLICATION_MAIN_DATABASE_URL}
+spring.datasource.username=${APPLICATION_MAIN_DATABASE_USERNAME}
+spring.datasource.password=${APPLICATION_MAIN_DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
