--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,25 @@
-spring.profiles.active=test
+spring.config.import=file:env.properties
+spring.profiles.active=${ACTIVE_PROFILE}
 spring.jpa.open-in-view=false
-server.port = 8081
+server.port=${APPLICATION_PORT}
 
 default.sender=put_email_here
 default.recipent=put_email_here
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=${EMAIL_HOST}
 spring.mail.username=your_email_here
 spring.mail.password=your_email_pass_here
-spring.mail.properties.mail.smtp.auth = true
-spring.mail.properties.mail.smtp.socketFactory.port = 465
-spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.smtp.socketFactory.fallback = false
-spring.mail.properties.mail.smtp.starttls.enable = true
-spring.mail.properties.mail.smtp.ssl.enable = true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
 
-jwt.secret=
-jwt.expiration=86400000
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION_TIME}
 
-aws.access_key_id=
-aws.secret_access_key=
-s3.bucket=
-s3.region=
+aws.access_key_id=${AWS_KEY_ID}
+aws.secret_access_key=${AWS_SECRET_KEY_ID}
+s3.bucket=${AWS_BUCKET}
+s3.region=${AWS_REGION}
