87. Enviando imagem via endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFact
 spring.mail.properties.mail.smtp.socketFactory.fallback=false
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=true
+spring.banner.location=${BANNER_LOCATION}
 
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION_TIME}
