--- a/pom.xml
+++ b/pom.xml
@@ -82,13 +82,13 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk</artifactId>
-      <version>LATEST</version>  
+      <version>1.12.331</version>  
     </dependency>
 
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>LATEST</version>
+      <version>2.11.0</version>
     </dependency>
 
 	</dependencies>
