--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,4 @@ aws.secret_access_key=${AWS_SECRET_KEY_ID}
 s3.bucket=${AWS_BUCKET}
 s3.region=${AWS_REGION}
 img.prefix.client.profile=${CLIENT_PROFILE_PREFIX}
-
+img.profile.size=${IMG_PROFILE_SIZE}
