97. Endpoint para buscar cliente por email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,12 @@ spring.config.import=file:env.properties
 spring.profiles.active=${ACTIVE_PROFILE}
 spring.jpa.open-in-view=false
 server.port=${APPLICATION_PORT}
+spring.h2.console.path=/h2-console
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:~/testdb;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
 
 default.sender=put_email_here
 default.recipent=put_email_here
